# s3it-tech-challenge

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
data/cells-mask/: cells_mask.tiff
data/images/: E-cadherin(Er167Di).tiff  Fibronectin(Dy163Di).tiff  HistoneH3(Yb176Di).tiff
data/single-cell-mask/: single_cell_mask.tiff
src/: main.cpp
src/etls/png/: CMakeLists.txt  png_decoder.cpp  png_decoder.h
src/etls/tiff/: CMakeLists.txt  tiff_decoder.cpp  tiff_decoder.h
src/include/: Error.hpp
src/solutions/: CMakeLists.txt  calculate_channel_mean.cpp  calculate_channel_mean.h
src/solutions/calculate_channel_mean/swig/: calculate_channel_mean.i  swig_build.sh  swig_clean.sh
test/: CMakeLists.txt  Dockerfile  tests.cpp
